--- a/curso-jsf-e-primefaces-essencial/pom.xml
+++ b/curso-jsf-e-primefaces-essencial/pom.xml
@@ -10,6 +10,14 @@
 		<project.build.sourceEnconding>UTF-8</project.build.sourceEnconding>
 	</properties>
 	<dependencies>
+		
+		<!--injeção de dependencias -->
+		<dependency>
+			<groupId>org.jboss.weld.servlet</groupId>
+			<artifactId>weld-servlet</artifactId>
+			<version>2.4.0.Final</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
