--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
@@ -4,5 +4,14 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	<display-name>curso-jsf-e-primefaces-essencial</display-name>
+	
+	<resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+	</resource-env-ref>
+	
+	<listener>
+		<listener-class>org.jboss.environment.servlet.Listener</listener-class>
+	</listener>
 
 </web-app>
