--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	</resource-env-ref>
 	
 	<listener>
-		<listener-class>org.jboss.environment.servlet.Listener</listener-class>
+		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
 	</listener>
 
 </web-app>
