--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,19 @@
 	version="3.0">
 	<display-name>curso-jsf-e-primefaces-essencial</display-name>
 	
+	<!-- nos fornce detalhes durante o desenvolvimento -->
+	<context-param>
+		<param-name>javax.faces.PROJECT_STAGE</param-name>
+		<param-value>Development</param-value>
+	</context-param>
+	
+	<!--não fazer cash das nossas paginas  -->
+	<context-param>
+		<param-name>javax.faces.FACELETS_REFRESH-PERIOD</param-name>
+		<param-value>0</param-value>
+	</context-param>
+	
+	
 	<resource-env-ref>
 		<resource-env-ref-name>BeanManager</resource-env-ref-name>
 		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
@@ -13,5 +26,15 @@
 	<listener>
 		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
 	</listener>
+	<!-- configurando o servlet -->
+	<servlet>
+		<servlet-name>Faces Servlet</servlet-name>
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.xhtml</url-pattern>
+	</servlet-mapping>
 
 </web-app>
