conhecendo os principais componentes e verificando os os escopos de um managed bean

--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	<display-name>curso-jsf-e-primefaces-essencial</display-name>
+	<welcome-file-list>
+		<welcome-file>GestaoEmpresas.xhtml</welcome-file>
+	</welcome-file-list>
 	
 	<!-- nos fornce detalhes durante o desenvolvimento -->
 	<context-param>
